--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.6.0
+Brotli==1.0.9
 Django==4.1.6
 django-environ==0.9.0
 gunicorn==20.1.0
 sqlparse==0.4.3
 tzdata==2022.7
+whitenoise==6.3.0
